--- a/GMO-JS-3/css/style.css
+++ b/GMO-JS-3/css/style.css
@@ -1,5 +1,3 @@
-.container {
-}
 .wrap {
   display: flex;
   border: solid 2px black;
@@ -11,21 +9,28 @@
 .message {
   margin: 10px 30px;
   border: solid 1px;
-  padding: 20px 30px;
+  min-width: 0%;
+  width: 40%;
 }
+.content {
+  height: 500px;
+  width: 100%;
+  border-bottom: 1px solid;
+  display: flex;
+  justify-content: space-between;
+}
+
 .content-message,
 .content-message-2 {
-  border: solid 1px;
-  width: 355px;
-  height: 300px;
   padding: 0 10px;
 }
 .controler {
-  margin-top: 20px;
+  margin: 10px 20px;
 }
 .send {
   display: flex;
-  margin-top: 20px;
+  margin: 10px 20px;
+  flex-wrap: wrap;
 }
 ul li {
   list-style: none;
@@ -40,9 +45,11 @@ ul li {
 }
 .content__send {
   border: solid 1px;
-  width: 250px;
+  max-width: 250px;
+  min-width: 10%;
   min-height: 50px;
   padding: 10px 10px;
+  margin-right: 10px;
 }
 .btn__send {
 }
@@ -52,16 +59,45 @@ ul li {
 #dam-2,
 #nghieng-2,
 #reset-2 {
-  padding: 8px 25px;
+  width: 80px;
+  height: 30px;
 }
 
 #send,
 #send-2 {
   background-color: white;
   padding: 26px 30px;
-  margin-left: 10px;
 }
 .choose {
   background-color: rgb(250, 146, 48);
   color: white;
+}
+
+ul {
+  width: 100%;
+}
+
+.mes {
+  display: inline-block;
+  width: 100%;
+}
+
+.sender {
+  display: block;
+  text-align: right;
+  color: red;
+}
+.receiver {
+  text-align: left;
+  color:blue
+}
+
+li + li {
+  margin-top: 5px;
+}
+@media (max-width: 550px) {
+  #send, #send-2 {
+    background-color: white;
+    padding: 10px 15px;
+}
 }
